# optimization_course

./: Makefile  calculating_pi.py  pyproject.toml
optimization_code/: gurobi_module.py
